--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: clean_arch
+name: Bookly
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,7 +30,10 @@ environment:
 dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
-  google_fonts: 6.1.0
+  google_fonts: ^6.2.1
+
+
+
 
   flutter:
     sdk: flutter
