--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  get: ^4.6.6
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  go_router: ^14.2.8
 
 
 
